--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "homepage": "https://github.com/imleckyyy/express#readme",
   "dependencies": {
+    "bcrypt": "^3.0.8",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.4",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "validator": "^12.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
